# hatch

./: .gitlab-ci.yml  .gitmodules  Makefile  README.md
.github/workflows/: lint.yml  run-simulations.yml  simulate.yml
scripts/: pdn.tcl
simulation/: .gitignore  Makefile  README.md  hatch.vlt  tb_hatch.sv  waiver-out.vlt  waiver.vlt
simulation/sw/: smoketest.elf  smoketest.hex
software/: .gitignore  CMakeLists.txt  README.md  riscv32.cmake
software/hello/: CMakeLists.txt  main.c
software/sdk/: link.ld
software/sdk/lib/: platform.c
software/smoketest/: CMakeLists.txt  main.c
software/trng_core/: CMakeLists.txt  main.c
software/wasm_intp/: CMakeLists.txt  main.c  main_debug.c
src/: cv32e40p_clock_gate.sv  cv32e40x_clock_gate.sv  hatch.v  hatch_core.v
src/croc_custom/: croc_domain.sv
src/soc/: core_wrap.sv  croc_domain.sv  croc_pkg.sv  cv32e40p_clock_gate.sv  hatch.sv  trace.sv  user_domain.sv  user_pkg.sv
